# prueba-tecnica

./: .gitignore  Dockerfile  README.md  create_tables.py  docker-compose.yml  main.py  pyproject.toml  setup.md  setup.py
app/api/: auth.py  dashboard.py  dimensions.py  polizas.py
app/core/: config.py  security.py
app/db/: database.py  models.py
app/schemas/: auth.py  dashboard.py  dimension.py  poliza.py
