[project]
name = "prueba-tecnica-backend-officer"
version = "1.0.0"
description = "Prueba técnica para el puesto de Backend Officer"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dateutil>=2.8.2",
    "tqdm>=4.67.1",
    "fastapi[standard]>=0.111.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5.0.0",
    "python-multipart>=0.0.9",
    "cachetools>=5.3.0",
    "typing-extensions>=4.8.0",
]
